2004-11-28  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-node-element-span.c: Clean-up of code, plus a dummy
	implementation of needs_area_regeneration

	* cong-editor-line-manager-simple.h: Ensure all LineManager
	objects know which EditorNode they are owned by; implement a
	handler for the width changing that lets them ask the child nodes
	if they want to regenerate their areas, and regenerate as
	appropriate.  Should make simple word wrapping work properly,
	fixing bug #143994

	* cong-editor-line-manager-span-wrapper.c: ditto

	* cong-editor-line-manager.c: ditto

	* cong-editor-line-manager.h: ditto

	* cong-editor-node.c: ditto

	* cong-editor-widget3.c: ditto

	* cong-editor-widget.h: ditto

	* cong-editor-node.h: ditto

	* cong-editor-line-manager-simple.c: listen to the width_changed
	signal on the owning area of the line_manager_simple; call a handler
	function on the base class line manager when it occurs.

	* cong-editor-area.c: Added a width_changed signal, emitted when
	allocated width changes

	* cong-editor-area.h: ditto

	* cong-traversal-node.c: Removed some debug spewage

2004-11-27  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-line-manager-simple.c: removed HACKED_WIDTH;
	replaced with calls to a function that gets the allocated width of
	the relevant CongEditorAreaLines

	* cong-editor-area.h: added functions to get allocated width and
	height of an area

	* cong-editor-area.c: ditto

	* Makefile.am: Removed tchoice.c

	* tchoice.c: Removed; this is very dead code from years ago!

	* cong-dispspec-element.c: Removed NEW_LOOK macro and the unused
	old look code since it doesn't compile and I don't plan to revive
	it.

	* cong-overview-view.c: ditto

	* cong-dispspec.h: ditto

	* cong-dispspec.c: ditto

	* cong-dispspec-element.h: ditto

	* global.h: ditto, plus removed the unused isblank macro

2004-11-25  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-debug-log-view.c: Removed dead code (#145096)
